--- a/src/main/webapp/include/customer/customerhistory.xhtml
+++ b/src/main/webapp/include/customer/customerhistory.xhtml
@@ -31,13 +31,22 @@
 
 			<b:gridBagLayout cols="810" rows="10,p,1,p,p" id="menu">
 				<b:cell x="1" y="1">
-					<b:titledBox label="Neuen Eintrag erfassen">
-						<b:gridBagLayout cols="2,*,100,2"
-							rows="2,100,2,p,2">
-							<b:cell x="2" y="2" width="2">
-								<b:textarea id="input" required="true" value="#{customerBackingBean.data.newHistoryEntry}"/>
+					<b:titledBox label="Neuen Eintrag erfassen" id="input">
+						<b:gridBagLayout cols="2,50,200,*,100,2"
+							rows="2,p,2,100,2,p,2">
+							<b:cell x="2" y="2">
+								<b:label id="typ" label="Typ"/>
+								<b:label id="text" label="Text" rendered="false"/>
 							</b:cell>
-							<b:cell x="3" y="4">
+							<b:cell x="3" y="2">
+								<b:combobox labelComponentId="typ" value="#{customerBackingBean.data.newHistoryType}" values="#{freelancerBackingBean.data.historyTypes}" nullable="false">
+									<f:converter converterId="historyTypeConverter"/>
+								</b:combobox>								
+							</b:cell>
+							<b:cell x="2" y="4" width="4">
+								<b:textarea labelComponentId="text" required="true" value="#{customerBackingBean.data.newHistoryEntry}"/>
+							</b:cell>
+							<b:cell x="5" y="6">
 								<b:commandButton sizeToGridBag="true" value="Erfassen" action="#{customerBackingBean.commandAddNewHistoryEntry}">
 									<a4j:support event="onclick"
 										reRender="input,history" />
@@ -66,7 +75,7 @@
 							<f:facet name="header">
 								<h:outputText value="Historie"/>
 							</f:facet>
-							<b:gridBagLayout cols="690,100" rows="p,2,p">
+							<b:gridBagLayout cols="590,200" rows="p,2,p">
 
 								<b:cell x="1" y="1">
 									<h:outputText value="#{row}">
