--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/freelancer/freelancersearchresult.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/freelancer/freelancersearchresult.xhtml
@@ -50,7 +50,7 @@
 				</b:cell>
 
 				<b:cell x="1" y="4">
-					<b:table var="row" value="#{freelancerBackingBean.data.searchResult}" cols="20,150,150,130,100,260">
+					<b:table var="row" value="#{freelancerBackingBean.data.searchResult}" cols="20,150,150,60,70,30,330">
 						<h:column>
 							<f:facet name="header">
 							</f:facet>
@@ -73,7 +73,13 @@
 						</h:column>
 						<h:column>
 							<f:facet name="header">
-								<h:outputText value="Verfügbarkeit"/>
+								<h:outputText value="Code"/>
+							</f:facet>
+							<h:outputText value="#{row.code}"/>
+						</h:column>
+						<h:column>
+							<f:facet name="header">
+								<h:outputText value="Verf."/>
 							</f:facet>
 							<h:outputText value="#{row.availabilityAsDate}">
 								<f:converter converterId="dateConverter"/>
@@ -81,7 +87,7 @@
 						</h:column>
 						<h:column>
 							<f:facet name="header">
-								<h:outputText value="Stundensatz"/>
+								<h:outputText value="Satz"/>
 							</f:facet>
 							<h:outputText value="#{row.sallaryLong}"/>
 						</h:column>
