Implementierung der ersten Version der Kontakthistorie Statistik

--- a/src/main/webapp/include/mainmenu.xhtml
+++ b/src/main/webapp/include/mainmenu.xhtml
@@ -27,4 +27,9 @@
 		<h:outputText value="Projekte" />
 		<a4j:support event="onclick" id="click5" />
 	</b:commandLink>
+	<f:verbatim>|</f:verbatim>
+	<b:commandLink action="#{navigationBackingBean.commandStatistik}" immediate="true" styleClass="menuitem2">
+		<h:outputText value="Statistik" />
+		<a4j:support event="onclick" id="click6" />
+	</b:commandLink>
 </f:subview>
