--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/statistic/statisticmain.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/statistic/statisticmain.xhtml
@@ -117,7 +117,7 @@
 						</h:column>
 						<h:column>
 							<f:facet name="header">
-								<h:outputText value="Benutzer"/>
+								<h:outputText value="K-Person"/>
 							</f:facet>
 							<h:outputText value="#{row.userid}"/>
 						</h:column>
