Debitor / Kreditor auf Projektmaske aufgenommen

--- a/src/main/webapp/include/project/projectmain.xhtml
+++ b/src/main/webapp/include/project/projectmain.xhtml
@@ -262,7 +262,7 @@
 				
 				<b:cell x="3" y="4">
 				
-				<b:gridBagLayout rows="p,10,p,10,p" cols="*" id="adresse">
+				<b:gridBagLayout rows="p,10,p,10,p,10,p" cols="*" id="adresse">
 						<b:cell x="1" y="1">
 							<b:titledBox label="Adresse Ansprechpartner">
 
@@ -365,6 +365,35 @@
 								</b:gridBagLayout>
 							</b:titledBox>
 						</b:cell>
+						
+						<b:cell x="1" y="5">
+							<b:titledBox label="Kodierung">
+
+								<b:gridBagLayout cols="2,100,2,*,2" rows="2,p,2,p,2">
+
+									<b:cell x="2" y="2">
+										<b:label id="debitor_label" label="Debitor" />
+									</b:cell>
+									<b:cell x="4" y="2">
+										<b:inputfield
+											value="#{projectBackingBean.data.entity.debitorNr}"
+											id="debitor" labelComponentId="debitor_label" />
+									</b:cell>
+
+									<b:cell x="2" y="4">
+										<b:label id="kreditor_label" label="Kreditor" />
+									</b:cell>
+									<b:cell x="4" y="4">
+										<b:inputfield
+											value="#{projectBackingBean.data.entity.kreditorNr}"
+											id="kreditor" labelComponentId="kreditor_label" />
+									</b:cell>
+
+								</b:gridBagLayout>
+
+							</b:titledBox>
+						</b:cell>
+						
 						
 					</b:gridBagLayout>
 				
