--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/project/projectmain.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/project/projectmain.xhtml
@@ -376,8 +376,8 @@
 									</b:cell>
 									<b:cell x="4" y="2">
 										<b:inputfield
-											value="#{projectBackingBean.data.entity.debitorNr}"
-											id="debitor" labelComponentId="debitor_label" />
+											value="#{projectBackingBean.data.entity.contactPerson.debitorNr}"
+											id="debitor" labelComponentId="debitor_label" disabled="true"/>
 									</b:cell>
 
 									<b:cell x="2" y="4">
@@ -385,8 +385,8 @@
 									</b:cell>
 									<b:cell x="4" y="4">
 										<b:inputfield
-											value="#{projectBackingBean.data.entity.kreditorNr}"
-											id="kreditor" labelComponentId="kreditor_label" />
+											value="#{projectBackingBean.data.entity.contactPerson.kreditorNr}"
+											id="kreditor" labelComponentId="kreditor_label" disabled="true"/>
 									</b:cell>
 
 								</b:gridBagLayout>
