--- a/src/main/webapp/template/powerstaff.xhtml
+++ b/src/main/webapp/template/powerstaff.xhtml
@@ -13,8 +13,8 @@
 		<td class="lightgray" valign="top">
 			<ui:insert name="mainmenu" />
 		</td>
-		<td class="lightgray" width="20" valign="top" rowspan="2">
-			<b:image source="/images/mclogo.gif" height="50" />		
+		<td class="lightgray" width="20" valign="top" rowspan="3">
+			<b:image source="/images/mclogo.gif" height="70" />		
 		</td>
 	</tr>
 	<tr height="20">
@@ -25,13 +25,16 @@
 		<td class="white"></td>
 		<td class="white"></td>
 	</tr>
+	<tr height="20">
+		<td class="white"></td>
+		<td class="white"></td>
+		<td class="white"></td>
+		<td class="white"></td>
+	</tr>
 	<tr>
 		<td class="white"></td>
 		<td class="white">
 			<table width="100%" cellspacing="0" cellpadding="0" border="0">
-				<tr height="20">
-					<td></td>
-				</tr>
 				<tr height="160">
 					<td class="green padding">
 						<ui:insert name="contextmenu" />
