--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/template/powerstaff.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/template/powerstaff.xhtml
@@ -14,7 +14,7 @@
 			<ui:insert name="mainmenu" />
 		</td>
 		<td class="lightgray" width="20" valign="top" rowspan="3">
-			<b:image source="/images/mclogo.gif" height="70" />		
+			<!-- <b:image source="/images/mclogo.gif" height="70" /> -->		
 		</td>
 	</tr>
 	<tr height="20">
